# LinuxStudio

./: .gitignore  ARM32_FIXES.md  CHANGELOG_EMBEDDED.md  CLI_TOOL_GUIDE.md  CMakeLists.txt  COMMAND_RENAME.md  CPP_BUILD_GUIDE.md  CPP_CODE_DOCUMENTATION.md  CPP_VERSION_SUMMARY.md  DEVELOPER_GUIDE.md  DEVELOPMENT_ROADMAP.md  DOCS_CONSOLIDATION.md  EMBEDDED_COMPATIBILITY.md  EMBEDDED_COMPATIBILITY_COMPLETE.txt  INSTALLATION_GUIDE.md  LICENSE  LinuxStudio_Architecture.md  PACKAGING_DISTRIBUTION_GUIDE.md  QUICK_INSTALL_EMBEDDED.md  README.md  RELEASE_SUMMARY_v1.1.2.md  SCENE_UPGRADE_NOTES.md  UPGRADE_GUIDE.md  VERSION_1.1.1_CHANGELOG.md  XKL_QUICK_REFERENCE.md  build.sh  et --hard 旧提交号  heaven-cn.sh  heaven.sh  heaven.txt  release.sh  新建 文本文档.md  随笔.md
.github/workflows/: release.yml
cmake/: arm32-toolchain.cmake
docs/: CHANGELOG.md  COMPILATION.md  DEBUG_GUIDE.md  DEVELOPER.md  DEVELOPER_GUIDE.md  DIAGNOSE_VERSION.md  DOCUMENTATION_INDEX.md  EMBEDDED.md  EMBEDDED_FIXES_SUMMARY.md  EMBEDDED_SSL_FIX.md  FIX_SCENE_COMMAND.md  FORCE_UPDATE.md  HEAVEN_SCRIPT_USAGE.md  INSTALLATION.md  INSTALLATION_FLOW_COMPARISON.md  INSTALLATION_GUIDE.md  INSTALLATION_METHODS_SUMMARY.md  INSTALLATION_PROCESS.md  POSTINST_FIX.md  QUICK_INSTALL_EMBEDDED.md  QUICK_UPGRADE.md  README.md  RELEASE_NOTES_v1.1.2.md  UPGRADE.md  USER_GUIDE.md  VERSION_1.1.2_CHANGELOG.md  cmake.md
include/linuxstudio/: core.hpp  i18n.hpp  logger.hpp  managers.hpp
packaging/: setup.sh
packaging/debian/: changelog  control  postinst  postrm  prerm  rules
packaging/rpm/: linuxstudio.spec
src/cli/: cli_handler.cpp  commands.cpp  main.cpp
src/core/: config.cpp  engine.cpp  system_detector.cpp
src/managers/: component_manager.cpp  plugin_manager.cpp
src/utils/: file_utils.cpp  logger.cpp
web/: .gitignore  composer.json  composer_install.md  email_system.php  i18n-simple.js  index.html  mobile.html  package.json  script.js  star_system.php  styles.css
